pkg/rollout/testdata/snapshots/rollout/state/riser-managed/myns/deployments/myapp/serving.knative.dev.route.myapp.yaml
# DO NOT MODIFY! This file was generated by the Riser platform. Changes will be lost
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  annotations:
    riser.dev/revision: "0"
    riser.dev/server-version: 0.0.0-local
  creationTimestamp: null
  labels:
    riser.dev/app: myapp
    riser.dev/deployment: myapp
    riser.dev/environment: dev
  name: myapp
  namespace: myns
spec:
  traffic:
  - percent: 100
    tag: r1
